@@ -54,7 +54,7 @@ public class SeatDraftable extends SinglePickDraftable {
             String unformattedName = "Seat " + i;
             String displayName = "Seat " + i;
             choices.add(new DraftChoice(
-                    getType(),
+                    TYPE,
                     choiceKey,
                     makeChoiceButton(choiceKey, null, buttonEmoji),
                     displayName,
@@ -73,8 +73,7 @@ public class SeatDraftable extends SinglePickDraftable {
 
     @Override
     public DraftChoice getNothingPickedChoice() {
-        return new DraftChoice(
-                getType(), null, null, "No seat picked", "No seat picked", MiscEmojis.resources.toString());
+        return new DraftChoice(TYPE, null, null, "No seat picked", "No seat picked", MiscEmojis.resources.toString());
     }
 
     @Override
@@ -129,12 +128,11 @@ public class SeatDraftable extends SinglePickDraftable {
     public Consumer<Player> setupPlayer(
             DraftManager draftManager, String playerUserId, PlayerSetupState playerSetupState) {
         PlayerDraftState pState = draftManager.getPlayerStates().get(playerUserId);
-        if (!pState.getPicks().containsKey(getType())
-                || pState.getPicks().get(getType()).isEmpty()) {
+        if (!pState.getPicks().containsKey(TYPE) || pState.getPicks().get(TYPE).isEmpty()) {
             throw new IllegalStateException("Player " + playerUserId + " has not picked a seat");
         }
 
-        String seat = pState.getPicks().get(getType()).get(0).getChoiceKey();
+        String seat = pState.getPicks().get(TYPE).getFirst().getChoiceKey();
         Integer seatNum = getSeatNumberFromChoiceKey(seat);
         if (seatNum == null) {
             throw new IllegalStateException("Player " + playerUserId + " has an invalid seat choice key: " + seat);
@@ -149,10 +147,9 @@ public class SeatDraftable extends SinglePickDraftable {
 
     @Override
     public String applySetupMenuChoices(GenericInteractionCreateEvent event, SettingsMenu menu) {
-        if (menu == null || !(menu instanceof DraftSystemSettings)) {
+        if (!(menu instanceof DraftSystemSettings draftSystemSettings)) {
             return "Error: Could not find parent draft system settings.";
         }
-        DraftSystemSettings draftSystemSettings = (DraftSystemSettings) menu;
         Game game = draftSystemSettings.getGame();
         if (game == null) {
             return "Error: Could not find game instance.";
